[package]
name = "rust_web_development_ch_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1.24.2", features = ["full"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
handle-errors = { path = "handle-errors"}
log = "0.4.17"
env_logger = "0.9.3"
log4rs = "1.2.0"
uuid = { version = "0.8", features = ["v4"] }
